tests/corpus/negative/N03-class/source.py
class Counter:
    def value(self):
        return 1

